--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- CSS -->
     <style>
         #bar-graph {
-            display:flex;
+            display: flex;
             align-items: flex-end;
             height: 300px;
             background-color: burlywood;
@@ -22,18 +22,38 @@
         }
 
         #bar-graph .bar {
+            z-index: 1;
             text-align: center;
             width: 20%;
             height: 5px;
-            margin: 10px;
+            margin: 5px 10px;
             background-color: red;
             position: relative;
         }
-        #bar-graph .bar span{
-            display:inline-block;
+
+        #bar-graph .bar span {
+            z-index: 2;
+            display: inline-block;
             transform: translate(0, 0.5rem);
             font-weight: 600;
-            font-size:1.2rem;
+            font-size: 1.2rem;
+        }
+
+        #bar-graph #y-axis {
+            z-index: 2;
+            padding: 5px;
+            border-right: 2px solid black;
+            height: 100%;
+            display: flex;
+            align-items: flex-end;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+        }
+
+        #bar-graph #y-axis span {
+            z-index: 3;
+            color: rgb(58, 58, 58);
+            font-weight: bold;
         }
     </style>
     <!-- CSS END -->
@@ -42,28 +62,87 @@
         <h1 class="text-2xl font-bold">Data visualisation</h1>
         This section contains some random number data for 5 years at a time (displayed as a bar graph)
         <div id="bar-graph" class="">
-            <div class="bar"><span>2000</span></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <div id="y-axis">
+                <!-- <span id="min-value">0%</span>
+                <span>20</span>
+                <span>40</span>
+                <span>60</span>
+                <span>80</span>
+                <span id="max-value">100%</span> -->
+            </div>
+            <div class="bar"><span>2018</span></div>
+            <div class="bar"><span>2019</span></div>
+            <div class="bar"><span>2020</span></div>
+            <div class="bar"><span>2021</span></div>
+            <div class="bar"><span>2022</span></div>
         </div>
     </section>
 
     <!-- HTML Content END -->
     <!-- Scripts -->
     <script>
-        const data = {
-            2018: 50,
-            2019: 45,
-            2020: 70,
-            2021: 164
-        };
+        const data = [
+            {
+                year: 2018,
+                value: 50
+            },
+            {
+                year: 2019,
+                value: 45
+            },
+            {
+                year: 2020,
+                value: 70
+            },
+            {
+                year: 2021,
+                value: 164
+            },
+            {
+                year: 2021,
+                value: 212
+            }
+        ];
         const barGraph = document.getElementById("bar-graph");
-        console.log(barGraph);
 
         const barGraphBars = barGraph.getElementsByClassName("bar");
-        console.log(barGraphBars);
+        if (barGraphBars !== null) console.log("Bars are present");
+
+        const dataNumbers = data.map(dataObjectKey => dataObjectKey.value);
+        const minValue = Math.min(...dataNumbers);
+        const maxValue = Math.max(...dataNumbers);
+
+        generateYAxis(minValue, maxValue);
+
+        
+
+        function generateYAxis(minValue, maxValue) {
+            const yAxis = document.getElementById("y-axis");
+            const noOfYAxisNumbersBetweenMinAndMax = 3;
+            const yAxisSize = noOfYAxisNumbersBetweenMinAndMax + 2;
+            const lastIteration = yAxisSize - 1;
+            const yAxisIncrement = Math.round((maxValue - minValue) / noOfYAxisNumbersBetweenMinAndMax);
+            let nextValue = minValue + yAxisIncrement;
+            for (let i = 0; i < noOfYAxisNumbersBetweenMinAndMax + 2; i++) {
+                const span = document.createElement("span");
+                switch (i) {
+                    case 0:
+                        span.id = "min-value";
+                        span.innerText = minValue;
+                        break;
+                    case lastIteration:
+                        span.id = "max-value";
+                        span.innerText = maxValue;
+                        break;
+                    default:
+                        span.innerText = nextValue;
+                        nextValue += yAxisIncrement;
+                        break;
+                }
+
+                yAxis.appendChild(span);
+            }
+        }
     </script>
     <!-- Scripts END -->
 </body>
