Make comment in html that shows example generation

--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
         This section contains some random number data for 5 years at a time (displayed as a bar graph)
         <div id="bar-graph" class="">
             <div id="y-axis">
-                <!-- <span id="min-value">0%</span>
-                <span>20</span>
-                <span>40</span>
-                <span>60</span>
-                <span>80</span>
-                <span id="max-value">100%</span> -->
+                <!-- The letters in the span tags represent generated numbers-->
+                <!-- <span id="min-value">a</span>
+                <span>b</span>
+                <span>c</span>
+                <span>d</span>
+                <span>x</span>
+                <span id="max-value">z</span> -->
             </div>
             <div class="bar"><span>2018</span></div>
             <div class="bar"><span>2019</span></div>
@@ -114,7 +115,7 @@
 
         generateYAxis(minValue, maxValue);
 
-        
+
 
         function generateYAxis(minValue, maxValue) {
             const yAxis = document.getElementById("y-axis");
