Add buttons to run the script and clear console

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <li>console.table</li>
         </ul>
         </p>
+        <!-- mainScript encapsulates the main.js functionality -->
+        <button onclick="mainScript()">Run main script</button> <span>(takes a few seconds to fully run)</span>
+        <button onclick="console.clear()">Clear console</button>
     </section>
 </body>
+
 </html>
