Add line saying which functions are missing

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 methods attached to the console object.
             </a>
         </p>
+        <p>Console functions NOT used: group, groupCollapsed, trace</p>
         <p>
         <h2 class="bold">Common</h2>
         <ul>
