--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     - If a number is selected that does not have meme associated with it,
       display a default meme.
  -->
+<h2>Add (from tutorial demo)</h2>
 <form action="add">
     <div>
         <label for="numberInput1">Enter number</label>
@@ -23,6 +24,27 @@
         <input type="number" id="numberInput2" name="numberInput2"/>
     </div>
     <button type="submit">Add numbers together</button>
+</form>
+<div>
+    <h2>Available meme ids</h2>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>9001</li>
+        <li>404</li>
+    </ul>
+</div>
+
+<form action="meme">
+    <div>
+        <label for="memeId">Enter meme id</label>
+        <input type="number" id="memeId" name="memeId"/>
+    </div>
+    <button type="submit">Show Meme</button>
 </form>
 </body>
 </html>
