--- a/neutralinojs-desktop-app/my-first-neu-app/resources/index.html
+++ b/neutralinojs-desktop-app/my-first-neu-app/resources/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <title>NeutralinoJs sample app</title>
-    <link rel="stylesheet" href="/styles.css">
-  </head>
-  <body>
-    <div id="neutralinoapp">
-      <h1>NeutralinoJs</h1>
-      <div id="info"></div>
-      <br/>
-      <img src="/icons/logo.gif" alt="Neutralinojs" />
-      <div>
-        <a href="#" onclick="openDocs();">Docs</a> &middot;  
+    <title>NeutralinoJs sample app (Home)</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+<header>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="other-page.html">Go to other page</a></li>
+        </ul>
+    </nav>
+</header>
+<div id="neutralinoapp">
+    <h1>NeutralinoJs</h1>
+    <div id="info"></div>
+    <br/>
+    <img src="/icons/logo.gif" alt="Neutralinojs"/>
+    <div>
+        <a href="#" onclick="openDocs();">Docs</a> &middot;
         <a href="#" onclick="openTutorial();">Video tutorial</a>
-      </div>
-      <button type="button" id="myButton">My Button</button>
     </div>
-    <!-- Neutralino.js client. This file is gitignored, 
-        because `neu update` typically downloads it.
-        Avoid copy-pasting it. 
-        -->
-    <script src="/js/neutralino.js"></script>
-    <!-- Your app's source files -->
-    <script src="/js/main.js"></script>
-  </body>
+</div>
+<!-- Neutralino.js client. This file is gitignored,
+    because `neu update` typically downloads it.
+    Avoid copy-pasting it.
+    -->
+<script src="/js/neutralino.js"></script>
+<!-- Your app's source files -->
+<script src="/js/main.js"></script>
+</body>
 </html>
