--- a/html-web-components/index.html
+++ b/html-web-components/index.html
@@ -5,18 +5,8 @@
     <title>Web component tryout</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <script src="DefaultHeader.js" defer></script>
+    <script src="loadSharedHeadValues.js"></script>
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    footer {
-        background-color: #999;
-    }
-</style>
 <body>
 
 <default-header></default-header>
